# rg_orion-o6

./: .gitmodules  Makefile  README.md  TESTING.TXT
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/workflows/: bootchain_build.yml  bootchain_debug_build.yml  bootchain_release_build.yml  build.yml  build_debug_bootchain.yml  build_os_image.yml  build_release_bootchain.yml  container_build.yml  os_build.yml  publish_container.yml  publish_release_image.yml  release_publish.yml  test.yml
bin-tf-a/: Makefile
bin-uefi/: Makefile
bin-uefi/platform/: O6.dsc
bin-uefi/platform/Drivers/PatinaDxeCore_ru/src/: lib.rs
bin-uefi/platform/OVERRIDE/Platform/CIX/Sky1/: Sky1Common.dsc.inc
common/: spi_flash_config_all.json
common/tests/acpi/src/: main.rs
common/tools/: prepare_release.py  prepare_release_notes.py  upload_nuget_artifact.py
image-bootchain/: Makefile
postbuild/os/: README.md
tee/: Makefile
tests/acpi/: Cargo.toml
tests/acpi/src/: main.rs
uefi/: Makefile
uefi/platform/: O6.dec  O6.dsc  O6.fdf
uefi/platform/Drivers/PatinaDxeCore_ru/: Cargo.toml
uefi/platform/Drivers/PatinaDxeCore_ru/.cargo/: config.toml
uefi/platform/Drivers/PatinaDxeCore_ru/src/: lib.rs  main.rs
uefi/platform/OVERRIDE/Platform/CIX/Sky1/: Sky1Common.dsc.inc  Sky1Common.fdf.inc
uefi/platform/OVERRIDE/Silicon/CIX/Sky1/Drivers/LcdGraphicsOutputDxe/: LcdGraphicsOutputDxe.depex  LcdGraphicsOutputDxe.efi  LcdGraphicsOutputDxe.inf
uefi/platform/bins/DeviceTree/: DeviceTree.inf  sky1-orion-o6.dtb
(+9 files in other folders)
