# Patina DXE Core driver for Radxa O6
#
# ## License
#
# Copyright (c) Microsoft Corporation.
#
# SPDX-License-Identifier: Apache-2.0

[package]
  name = "dxe_core"
  version = "2.0.3"
  edition = "2024"
  license = "Apache-2.0"

[dependencies]
  log = "^0.4"
  heapless = "0.9.1"

[target.'cfg(target_os = "uefi")'.dependencies]
  patina_dxe_core = "20.0.1"
  patina = "20.0.1"
  patina_ffs_extractors = "20.0.1"

[profile.dev]
  opt-level = "s"

[profile.test]
  opt-level = 0

[features]
  default = ["compatibility_mode_allowed"]
  compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
